syntax = "proto3";
package com.strandhvilliam.events;

option java_package = "com.strandhvilliam.events.proto";
option java_outer_classname = "OrderEventProto";
option java_multiple_files = true;

message OrderEvent {
  string id = 1;
  string date = 2;
  string customerId = 3;
  string status = 4;
  repeated OrderEventItem items = 5;
  string restaurantId = 6;
}
message OrderEventItem {
  string id = 1;
  string productId = 2;
  string description = 3;
  double cost = 4;
}
